--- a/peptide_comparison_tool.html
+++ b/peptide_comparison_tool.html
@@ -68,7 +68,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter",Segoe
 .best-badge{display:inline-block;font-size:.5rem;font-weight:800;color:var(--slate-50);background:linear-gradient(135deg,var(--green-500),var(--green-400));padding:2px 8px;border-radius:4px;letter-spacing:.8px;white-space:nowrap;box-shadow:0 2px 8px rgba(16,185,129,.15)}
 .td-ppm{color:var(--slate-500);font-size:.8rem;font-weight:600;font-variant-numeric:tabular-nums}
 .td-vendor{font-size:.85rem}
-.vendor-link{color:var(--slate-300);text-decoration:none;font-weight:600;border-bottom:1px solid rgba(203,213,225,.2);transition:all .2s}
+.vendor-link{color:var(--blue-400);text-decoration:none;font-weight:600;border-bottom:1px solid rgba(43,125,233,.3);transition:all .2s}
 .vendor-link:hover{color:var(--blue-400);border-bottom-color:var(--blue-400)}
 .vendor-link-prc{color:var(--blue-400);font-weight:700;border-bottom-color:rgba(43,125,233,.4)}
 .vendor-prc{color:var(--blue-400);font-weight:700}
