--- a/peptide_comparison_tool.html
+++ b/peptide_comparison_tool.html
@@ -57,20 +57,20 @@ body{font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter",Segoe
 .table tbody tr:nth-child(even){background:rgba(255,255,255,.008)}
 .table tbody tr:hover{background:rgba(43,125,233,.04)}
 .table td{padding:.85rem .85rem;vertical-align:middle}
-.prc-row{background:rgba(43,125,233,.05)!important;position:relative}
+.prc-row{background:rgba(43,125,233,.12)!important;position:relative}
 .prc-row::before{content:"";position:absolute;left:0;top:0;bottom:0;width:3px;background:linear-gradient(180deg,var(--blue-400),var(--blue-500))}
 .td-name{font-weight:700;color:var(--slate-50);letter-spacing:-.01em;font-size:.9rem}
 .td-strength{color:var(--slate-400);font-weight:600;font-size:.825rem}
 .td-price{font-variant-numeric:tabular-nums}
 .price-val{font-weight:800;font-size:.95rem;color:var(--slate-200);letter-spacing:-.01em}
-.price-prc{color:var(--green-400);font-size:1rem}
+.price-prc{color:#10B981;font-size:1rem;font-weight:800}
 .price-wrap{display:flex;flex-direction:column;align-items:flex-start;gap:4px}
 .best-badge{display:inline-block;font-size:.5rem;font-weight:800;color:var(--slate-50);background:linear-gradient(135deg,var(--green-500),var(--green-400));padding:2px 8px;border-radius:4px;letter-spacing:.8px;white-space:nowrap;box-shadow:0 2px 8px rgba(16,185,129,.15)}
 .td-ppm{color:var(--slate-500);font-size:.8rem;font-weight:600;font-variant-numeric:tabular-nums}
 .td-vendor{font-size:.85rem}
 .vendor-link{color:var(--slate-300);text-decoration:none;font-weight:600;border-bottom:1px solid rgba(203,213,225,.2);transition:all .2s}
 .vendor-link:hover{color:var(--blue-400);border-bottom-color:var(--blue-400)}
-.vendor-link-prc{color:var(--blue-400);font-weight:700;border-bottom-color:rgba(43,125,233,.4)}
+.vendor-link-prc{color:#2B7DE9;font-weight:800;border-bottom-color:rgba(43,125,233,.4)}
 .vendor-prc{color:var(--blue-400);font-weight:700}
 .td-code{font-size:.8rem}
 .disc-code{font-family:"SF Mono",Menlo,Monaco,Consolas,monospace;font-size:.7rem;color:var(--cyan-400);background:rgba(6,182,212,.08);padding:.3rem .65rem;border-radius:6px;border:1px solid rgba(6,182,212,.15);letter-spacing:.3px;font-weight:600}
