--- a/peptide_comparison_tool.html
+++ b/peptide_comparison_tool.html
@@ -2,6 +2,9 @@
 <html lang="en"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<meta name="color-scheme" content="only light">
+<meta name="supported-color-schemes" content="light">
+<style>:root{color-scheme:only light}</style>
 <title>Peptide Price Comparison — The Definitive Research Peptide Market Index</title>
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
