--- a/peptide_comparison_tool.html
+++ b/peptide_comparison_tool.html
@@ -68,7 +68,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter",Segoe
 .price-val{font-weight:800;font-size:.95rem;color:var(--slate-200);letter-spacing:-.01em}
 .price-prc{color:#10B981;font-size:1rem;font-weight:800}
 .price-wrap{display:flex;flex-direction:column;align-items:flex-start;gap:4px}
-.best-badge{display:inline-block;font-size:.5rem;font-weight:800;color:var(--slate-50);background:linear-gradient(135deg,var(--green-500),var(--green-400));padding:2px 8px;border-radius:4px;letter-spacing:.8px;white-space:nowrap;box-shadow:0 2px 8px rgba(16,185,129,.15)}
+.best-badge{display:inline-block;font-size:.55rem;font-weight:800;color:#FFFFFF;background:linear-gradient(135deg,#059669,#10B981);padding:3px 10px;border-radius:10px;letter-spacing:.6px;white-space:nowrap;box-shadow:0 2px 8px rgba(16,185,129,.25);margin-top:4px}
 .td-ppm{color:var(--slate-500);font-size:.8rem;font-weight:600;font-variant-numeric:tabular-nums}
 .td-vendor{font-size:.85rem}
 .vendor-link{color:var(--slate-300);text-decoration:none;font-weight:600;border-bottom:1px solid rgba(203,213,225,.2);transition:all .2s}
