--- a/peptide_comparison_tool.html
+++ b/peptide_comparison_tool.html
@@ -60,8 +60,8 @@ body{font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter",Segoe
 .table tbody tr:nth-child(even){background:rgba(255,255,255,.008)}
 .table tbody tr:hover{background:rgba(43,125,233,.04)}
 .table td{padding:.85rem .85rem;vertical-align:middle}
-.prc-row{background:rgba(43,125,233,.12)!important;position:relative}
-.prc-row::before{content:"";position:absolute;left:0;top:0;bottom:0;width:3px;background:linear-gradient(180deg,var(--blue-400),var(--blue-500))}
+
+.prc-row{background:rgba(43,125,233,.10)!important;border-left:3px solid #2B7DE9}
 .td-name{font-weight:700;color:var(--slate-50);letter-spacing:-.01em;font-size:.9rem}
 .td-strength{color:var(--slate-400);font-weight:600;font-size:.825rem}
 .td-price{font-variant-numeric:tabular-nums}
