--- a/peptide-calculator.html
+++ b/peptide-calculator.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: #1a1a2e;
+            background: #0a0a14;
             color: #ffffff;
             padding: 20px;
             line-height: 1.6;
@@ -26,7 +26,7 @@
 
         h1 {
             text-align: center;
-            color: #d4a843;
+            color: #4a90d9;
             margin-bottom: 10px;
             font-size: 28px;
             font-weight: 700;
@@ -47,9 +47,9 @@
         }
 
         .preset-btn {
-            background: linear-gradient(135deg, #2a2a4e 0%, #1f1f3a 100%);
-            border: 2px solid #d4a843;
-            color: #d4a843;
+            background: linear-gradient(135deg, #1a1a2e 0%, #141428 100%);
+            border: 2px solid #4a90d9;
+            color: #4a90d9;
             padding: 12px 16px;
             border-radius: 8px;
             cursor: pointer;
@@ -60,10 +60,10 @@
         }
 
         .preset-btn:hover {
-            background: linear-gradient(135deg, #d4a843 0%, #b8922a 100%);
-            color: #1a1a2e;
+            background: linear-gradient(135deg, #4a90d9 0%, #3a7bc4 100%);
+            color: #0a0a14;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(212, 168, 67, 0.3);
+            box-shadow: 0 4px 12px rgba(74, 144, 217, 0.3);
         }
 
         .preset-btn:active {
@@ -72,7 +72,7 @@
 
         .input-section {
             background: rgba(42, 42, 78, 0.5);
-            border: 1px solid rgba(212, 168, 67, 0.3);
+            border: 1px solid rgba(74, 144, 217, 0.3);
             border-radius: 12px;
             padding: 25px;
             margin-bottom: 30px;
@@ -89,7 +89,7 @@
         label {
             display: block;
             margin-bottom: 8px;
-            color: #d4a843;
+            color: #4a90d9;
             font-weight: 600;
             font-size: 14px;
         }
@@ -97,8 +97,8 @@
         input[type="number"] {
             width: 100%;
             padding: 12px 16px;
-            background: #2a2a4e;
-            border: 2px solid rgba(212, 168, 67, 0.3);
+            background: #1a1a2e;
+            border: 2px solid rgba(74, 144, 217, 0.3);
             border-radius: 8px;
             color: #ffffff;
             font-size: 16px;
@@ -107,8 +107,8 @@
 
         input[type="number"]:focus {
             outline: none;
-            border-color: #d4a843;
-            box-shadow: 0 0 0 3px rgba(212, 168, 67, 0.2);
+            border-color: #4a90d9;
+            box-shadow: 0 0 0 3px rgba(74, 144, 217, 0.2);
         }
 
         input[type="number"]::placeholder {
@@ -116,15 +116,15 @@
         }
 
         .results-section {
-            background: linear-gradient(135deg, rgba(212, 168, 67, 0.1) 0%, rgba(42, 42, 78, 0.3) 100%);
-            border: 2px solid #d4a843;
+            background: linear-gradient(135deg, rgba(74, 144, 217, 0.1) 0%, rgba(42, 42, 78, 0.3) 100%);
+            border: 2px solid #4a90d9;
             border-radius: 12px;
             padding: 25px;
             margin-bottom: 30px;
         }
 
         .results-title {
-            color: #d4a843;
+            color: #4a90d9;
             font-size: 20px;
             font-weight: 700;
             margin-bottom: 20px;
@@ -133,7 +133,7 @@
 
         .result-item {
             background: rgba(26, 26, 46, 0.6);
-            border-left: 4px solid #d4a843;
+            border-left: 4px solid #4a90d9;
             padding: 15px;
             margin-bottom: 15px;
             border-radius: 6px;
@@ -150,14 +150,14 @@
         }
 
         .result-value {
-            color: #d4a843;
+            color: #4a90d9;
             font-size: 24px;
             font-weight: 700;
         }
 
         .syringe-container {
             background: rgba(42, 42, 78, 0.3);
-            border: 1px solid rgba(212, 168, 67, 0.2);
+            border: 1px solid rgba(74, 144, 217, 0.2);
             border-radius: 12px;
             padding: 30px 20px;
             margin-bottom: 30px;
@@ -165,7 +165,7 @@
         }
 
         .syringe-title {
-            color: #d4a843;
+            color: #4a90d9;
             font-size: 18px;
             font-weight: 600;
             margin-bottom: 20px;
@@ -180,20 +180,20 @@
 
         .how-to-section {
             background: rgba(42, 42, 78, 0.3);
-            border: 1px solid rgba(212, 168, 67, 0.2);
+            border: 1px solid rgba(74, 144, 217, 0.2);
             border-radius: 12px;
             padding: 25px;
         }
 
         .how-to-section h2 {
-            color: #d4a843;
+            color: #4a90d9;
             font-size: 22px;
             font-weight: 700;
             margin-bottom: 20px;
         }
 
         .how-to-section h3 {
-            color: #d4a843;
+            color: #4a90d9;
             font-size: 16px;
             font-weight: 600;
             margin-top: 20px;
@@ -220,13 +220,13 @@
         }
 
         .warning {
-            background: rgba(212, 168, 67, 0.1);
-            border-left: 4px solid #d4a843;
+            background: rgba(74, 144, 217, 0.1);
+            border-left: 4px solid #4a90d9;
             padding: 15px;
             margin-top: 20px;
             border-radius: 6px;
             font-size: 13px;
-            color: #d4a843;
+            color: #4a90d9;
             line-height: 1.6;
         }
 
@@ -313,7 +313,7 @@
                 </g>
                 
                 <!-- Liquid fill (will be animated) -->
-                <rect id="liquidFill" x="85" y="105" width="0" height="74" fill="#d4a843" opacity="0.7" rx="2">
+                <rect id="liquidFill" x="85" y="105" width="0" height="74" fill="#4a90d9" opacity="0.8" rx="2">
                     <animate id="liquidAnimation" attributeName="width" dur="0.5s" fill="freeze"/>
                 </rect>
                 
